vortex-btrblocks/tests/snapshots/golden__unstable__binary_low_cardinality.snap
---
source: vortex-btrblocks/tests/golden.rs
expression: rendered
---
input: binary, len=16384, nbytes=315856
root: vortex.dict(binary, len=16384) nbytes=6240
  metadata: all_values_referenced: true
  codes: fastlanes.bitpacked(u8, len=16384) nbytes=6144
    metadata: bit_width: 3, offset: 0
  values: vortex.varbinview(binary, len=5) nbytes=96
    metadata:
