vortex-btrblocks/tests/snapshots/golden__unstable__list_of_int_runs.snap
---
source: vortex-btrblocks/tests/golden.rs
expression: rendered
---
input: list(i32), len=4066, nbytes=81804
root: vortex.list(list(i32), len=4066) nbytes=6016
  metadata: 
  elements: vortex.runend(i32, len=16384) nbytes=3968
    metadata: offset: 0
    ends: fastlanes.for(u16, len=1020) nbytes=1792
      metadata: reference: 13u16
      encoded: fastlanes.bitpacked(u16, len=1020) nbytes=1792
        metadata: bit_width: 14, offset: 0
    values: fastlanes.for(i32, len=1020) nbytes=2176
      metadata: reference: -49931i32
      encoded: fastlanes.bitpacked(i32, len=1020) nbytes=2176
        metadata: bit_width: 17, offset: 0
  offsets: fastlanes.delta(u16, len=4067) nbytes=2048
    metadata: offset: 0
    bases: vortex.primitive(u16, len=256) nbytes=512
      metadata: ptype: u16
    deltas: fastlanes.bitpacked(u16, len=4096) nbytes=1536
      metadata: bit_width: 3, offset: 0
